--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
+  font-family: 'Pacifico', cursive;
   width: 400px;
-  height: 450px;
+  height: 550px;
   padding: 20px;
   margin: 20px;
   background-color: #00BFFF;
@@ -18,6 +19,7 @@ body {
   color: white;
   font-size: 20px;
   text-align: left;
+  font-family: 'Roboto', sans-serif;
 }
 
 .header_title {
